fix(tag): resolve tag visibility and counting logic - Fix issue where unlinked tags were hidden from the list

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -156,3 +156,7 @@ body {
         width: 100%;
     }
 }
+
+.mt-2{
+	margin-top: 20px;
+}
